# hDAO

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/dao/workdir/: dna.yaml
tests/src/dao/one_vote_per_user_dao/: proposal-page.test.ts  proposal-vote.test.ts
ui/: index.html  package.json  tsconfig.tsbuildinfo
ui/out-tsc/: contexts.js  contexts.js.map  holochain-app.js  holochain-app.js.map  styles.js  styles.js.map
ui/out-tsc/Elements/: ButtonStyles.js  ButtonStyles.js.map
ui/out-tsc/components/: button.js  button.js.map  corp-button.js.map
ui/out-tsc/dao/components/: corp-button.js  corp-button.js.map  home-page.js  home-page.js.map  navbarTop.js  navbarTop.js.map  textfield.js  textfield.js.map
ui/out-tsc/dao/one_vote_per_user_dao/: all-proposals-created-by-user.js  all-proposals-created-by-user.js.map  all-proposals-voted-by-user.js  all-proposals-voted-by-user.js.map  all-proposals.js  all-proposals.js.map  create-proposal-page.js  create-proposal-page.js.map  create-proposal-vote.js  create-proposal-vote.js.map  proposal-page-detail.js  proposal-page-detail.js.map  proposal-page.js  proposal-page.js.map  proposal-vote-detail.js  proposal-vote-detail.js.map  proposal-vote-for-proposal-page.js  proposal-vote-for-proposal-page.js.map  proposal-vote.js  proposal-vote.js.map
ui/src/: holochain-app.ts  styles.ts
ui/src/dao/: styles.css
ui/src/dao/components/: corp-button.ts  navbarTop.ts  textfield.ts
ui/src/dao/one_vote_per_user_dao/: all-proposals-created-by-user.ts  all-proposals-voted-by-user.ts  (+8 more)
workdir/: happ.yaml  web-happ.yaml
(+11 files in other folders)
